webui/logs/processes/1_-_Pump_Control_172.26.40.155_190317_164747.log
id:279
user_name:172.26.40.155
user_id:172.26.40.1-fd619819a3174031
script:1 - Pump Control
start_time:1552841267355
command:/eve/scripts/webui-sc/mpumptimed.py all Drug,Media,Waste 1
exit_code:1
>>>>>  OUTPUT STARTED <<<<<
  File "/eve/scripts/webui-sc/mpumptimed.py", line 72
    )
    ^
SyntaxError: invalid syntax
